1.04	2016-12-20
		- Changed CPAN repositry info in PODs

1.03	2016-12-19
		- sub whereisBin exec test
		- Service installation status detection is changed

1.02	2016-12-18
		- Added Systemd.pm
		- Improvements and fixes

1.01	2016-12-17
		- Zabbix::Check first release