@@ -2,10 +2,14 @@ NAME
     Zabbix::Check - Zabbix Agent system and service checks
 
 VERSION
-    version 1.03
+    version 1.04
 
 SYNOPSIS
     Zabbix Agent system and service checks
+
+   zabbix_agentd.conf
+    UserParameter=cpan.zabbix.check.version,/usr/bin/perl -MZabbix::Check
+    -e_version
 
   Disk
     Zabbix check for disk
@@ -94,7 +98,7 @@ DEPENDENCIES
 REPOSITORY
     GitHub <https://github.com/orkunkaraduman/Zabbix-Check>
 
-    CPAN <https://metacpan.org/pod/Zabbix::Check>
+    CPAN Lhttps://metacpan.org/release/Zabbix-Check>
 
 AUTHOR
     Orkun Karaduman <orkunkaraduman@gmail.com>
