@@ -1,5 +1,6 @@
 1.04	2016-12-20
 		- Changed CPAN repositry info in PODs
+		- Added version info to use by Zabbix Agent
 
 1.03	2016-12-19
 		- sub whereisBin exec test
